# react-fast-dry

./: .gitignore  README.md  SQL_QUERIES_DESIGN.md  TECHNICAL_ROADMAP.md  developer_guide.md  jobs.json  pyproject.toml  requirements.txt  run.py  setup.py  test_import.py  user_guide.md
frontend/: app copy.py  app.py
frontend/src/components/: ImportButton.tsx
src/: dbt_development_plan.md  main.py
src/api/: generic_dataset_router.py  response_utils.py  wells_router.py
src/application/: __init__.py
src/application/services/: __init__.py  base.py  external_api_service.py  fetchers.py  generic_data_service.py  odata_well_production_import_service.py  well_production_import_service.py  well_production_query_service.py  well_production_service.py  wells_service.py
src/application/use_cases/: import_well_production.py
src/config/: datasets_config.py  settings.py
src/domain/: __init__.py  models.py  ports.py
src/domain/entities/: well_production.py
src/domain/ports/: external_api_port.py  odata_external_api_port.py  repository.py  services.py
src/domain/repositories/: well_production_repository.py
src/domain/value_objects/: source_data.py
src/infra/: duckdb_repo.py  load_mock_data.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: external_api_adapter.py  mock_external_service.py  odata_external_api_adapter.py  odata_external_service.py
src/infrastructure/db/: duckdb_repo.py
src/infrastructure/operations/: wells.sql
src/infrastructure/repositories/: composite_well_production_repository.py  duckdb_well_production_repository.py  generic_duckdb_repository.py  well_production_repository_impl.py
src/interfaces/: __init__.py
src/interfaces/api/: dependencies.py  generic_dataset_router.py  mappers.py  schemas.py  well_production_routes.py
src/repo/: base.py
src/service/: external_api_service.py  wells_service.py
src/shared/: __init__.py  batch_processor.py  config.py  dependencies.py  exceptions.py  generic_dependencies.py  job_manager.py  responses.py  schema.py
src/shared/config/: datasets_config.py  schemas.py  settings.py
src/shared/utils/: timing_decorator.py
src/sql/: wells.sql
src/utils/: sql_loader.py
styles/: custom.css
tests/: README.md  __init__.py  conftest.py  counter.py  create_json.py  dedup_json.py  domain_script_test.py  pytest.ini  run_basic_test.py  run_tests.py  test_async.py  test_requirements.txt
tests/api/: __init__.py  test_health.py  test_wells.py
tests/integration/: __init__.py  test_api_workflow.py
tests/unit/: __init__.py  test_external_api_service.py
tests/utils/: __init__.py  test_helpers.py
workflows/: 01-csv-export-workflow.md  03-import-trigger-workflow.md  04-odata-import-workflow.md  05-statistics-workflow.md
