[project]
name = "react-fast-v9"
version = "0.1.0"
description = "FastAPI application for well production data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "duckdb>=1.3.0",
    "polars>=1.30.0",
    "pandas>=2.2.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]
